--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -11,7 +11,7 @@ keywords = ["diesel", "migrations", "cli"]
 autotests = false
 edition = "2021"
 include = ["src/**/*", "LICENSE-*", "README.md"]
-rust-version = "1.66.0"
+rust-version.workspace = true
 
 [package.metadata.wix]
 upgrade-guid = "AC330981-F4F8-4D8A-AD78-F8B7ECC32DF3"
