--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://diesel.rs"
 repository = "https://github.com/diesel-rs/diesel/"
 autotests = false
 include = ["src/**/*", "LICENSE-*"]
-rust-version = "1.66.0"
+rust-version.workspace = true
 edition = "2021"
 
 [dependencies]
