--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -32,6 +32,7 @@ serde = { version = "1.0.0", features = ["derive"] }
 toml = "0.8"
 url = { version = "2.2.2" }
 libsqlite3-sys = { version = ">=0.17.2, <0.29.0", optional = true }
+pq-sys = { version = ">=0.4, <0.6.0", optional = true }
 diffy = "0.3.0"
 regex = "1.0.6"
 serde_regex = "1.1"
@@ -61,13 +62,14 @@ postgres = ["diesel/postgres", "uses_information_schema"]
 sqlite = ["diesel/sqlite"]
 mysql = ["diesel/mysql", "uses_information_schema"]
 sqlite-bundled = ["sqlite", "libsqlite3-sys/bundled"]
+postgres-bundled = ["postgres", "pq-sys/bundled"]
 uses_information_schema = []
 
 [[test]]
 name = "tests"
 
 [package.metadata.dist]
-features = ["sqlite-bundled"]
+features = ["sqlite-bundled", "postgres-bundled"]
 
 [package.metadata.dist.dependencies.apt]
 libpq-dev = '*'
