--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -22,6 +22,8 @@ ipnetwork = ">=0.12.2, <0.21.0"
 bigdecimal = ">= 0.0.13, < 0.5.0"
 rand = "0.8.4"
 libsqlite3-sys = { version = "0.28", optional = true }
+pq-sys = { version = "0.5", optional = true }
+pq-src = { version = "0.1.1", optional = true }
 
 [features]
 default = []
