--- a/examples/postgres/composite_types/Cargo.toml
+++ b/examples/postgres/composite_types/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "2.1", features = ["postgres" ] }
+diesel = { version = "2.1", path = "../../../diesel", features = ["postgres" ] }
 dotenvy = "0.15"
