--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -10,22 +10,35 @@ autobenches = false
 
 [dependencies]
 dotenvy = "0.15"
-criterion = {version = "0.5", default-features = false, features = ["csv_output", "cargo_bench_support"]}
-sqlx = {version = "0.7", features = ["runtime-tokio-rustls"], optional = true}
-tokio = {version = "1", optional = true}
-rusqlite = {version = "0.29", optional = true}
-rust_postgres = {version = "0.19.7", optional = true, package = "postgres"}
-rust_mysql = {version = "23.0", optional = true, package = "mysql"}
-rustorm = {version = "0.20", optional = true}
-rustorm_dao = {version = "0.20", optional = true}
-quaint = {version = "=0.2.0-alpha.13", optional = true, features = ["uuid"]}
-serde = {version = "1", optional = true, features = ["derive"]}
-sea-orm = {  git = "https://github.com/SeaQL/sea-orm/", branch = "master", optional = true, features = ["runtime-tokio-rustls"]}
-futures = {version = "0.3", optional = true}
-diesel-async = {version = "0.4", optional = true, default-features = false}
-criterion-perf-events = { version = "0.4", optional = true}
-perfcnt = {version = "0.8", optional = true}
-wtx = { default-features = false, features = ["atoi", "postgres", "simdutf8", "std", "tokio"], optional = true, version = "0.12" }
+criterion = { version = "0.5", default-features = false, features = [
+  "csv_output",
+  "cargo_bench_support",
+] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls"], optional = true }
+tokio = { version = "1", optional = true }
+rusqlite = { version = "0.29", optional = true }
+rust_postgres = { version = "0.19.7", optional = true, package = "postgres" }
+rust_mysql = { version = "23.0", optional = true, package = "mysql" }
+rustorm = { version = "0.20", optional = true }
+rustorm_dao = { version = "0.20", optional = true }
+quaint = { version = "=0.2.0-alpha.13", optional = true, features = [
+  "postgres-types",
+] }
+serde = { version = "1", optional = true, features = ["derive"] }
+sea-orm = { git = "https://github.com/SeaQL/sea-orm/", branch = "master", optional = true, features = [
+  "runtime-tokio-rustls",
+] }
+futures = { version = "0.3", optional = true }
+diesel-async = { version = "0.4", optional = true, default-features = false }
+criterion-perf-events = { version = "0.4", optional = true }
+perfcnt = { version = "0.8", optional = true }
+wtx = { default-features = false, features = [
+  "atoi",
+  "postgres",
+  "simdutf8",
+  "std",
+  "tokio",
+], optional = true, version = "0.12" }
 
 [dependencies.diesel]
 path = "../diesel"
@@ -55,6 +68,6 @@ fast_run = []
 
 
 [patch.crates-io]
-quaint = {git = "https://github.com/prisma/prisma-engines", rev = "8f088bb"}
-diesel-async = { git = "https://github.com/weiznich/diesel_async", rev = "017ebe2"}
-diesel = { path = "../diesel"}
+quaint = { git = "https://github.com/prisma/prisma-engines", rev = "5a9203d" }
+diesel-async = { git = "https://github.com/weiznich/diesel_async", rev = "017ebe2" }
+diesel = { path = "../diesel" }
