purge all postgres versions

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -32,7 +32,8 @@ jobs:
         if: matrix.backend == 'postgres'
         run: |
           sudo apt-get update
-          sudo apt install gnupg2 -y
+          sudo DEBIAN_FRONTEND=noninteractive apt-get --purge remove postgresql\* -y
+          sudo apt-get install gnupg2 -y
           curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc|sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/postgresql.gpg
           sudo sh -c 'echo "deb https://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           PG_VER=16
