remove bencher from metrics as it was not intended to be there

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,10 +20,6 @@ jobs:
       fail-fast: false
       matrix:
         backend: ["postgres", "sqlite", "mysql"]
-    env:
-      BENCHER_PROJECT: diesel
-      BENCHER_BRANCH: master
-      BENCHER_ADAPTER: rust_criterion
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -77,7 +73,7 @@ jobs:
 
       - name: Run Benchmarks (Postgres)
         if: matrix.backend == 'postgres'
-        run: bencher run 'cargo +stable bench --no-fail-fast --manifest-path diesel_bench/Cargo.toml --no-default-features --features "postgres sqlx-bench sqlx/postgres rust_postgres futures sea-orm sea-orm/sqlx-postgres criterion/async_tokio serde diesel-async diesel-async/postgres wtx"'
+        run: cargo +stable bench --no-fail-fast --manifest-path diesel_bench/Cargo.toml --no-default-features --features "postgres sqlx-bench sqlx/postgres rust_postgres futures sea-orm sea-orm/sqlx-postgres criterion/async_tokio serde diesel-async diesel-async/postgres wtx"
 
       - name: Run Benchmarks (Sqlite)
         if: matrix.backend == 'sqlite'
