--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -14,20 +14,22 @@ criterion = { version = "0.5", default-features = false, features = [
   "csv_output",
   "cargo_bench_support",
 ] }
-sqlx = { version = "0", features = ["runtime-tokio-rustls"], optional = true }
+sqlx = { version = "0.7.3", features = [
+  "runtime-tokio-rustls",
+], optional = true }
 tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
 rusqlite = { version = "0.29", optional = true }
 rust_postgres = { version = "0.19.7", optional = true, package = "postgres" }
 rust_mysql = { version = "23.0", optional = true, package = "mysql" }
 rustorm = { version = "0.20", optional = true }
 rustorm_dao = { version = "0.20", optional = true }
-quaint = { version = "0", optional = true, default-features = false }
+quaint = { version = "0.2.0-alpha.13", optional = true, default-features = false }
 serde = { version = "1", optional = true, features = ["derive"] }
-sea-orm = { version = "0", optional = true, features = [
+sea-orm = { version = "0.12.14", optional = true, features = [
   "runtime-tokio-rustls",
 ] }
 futures = { version = "0.3", optional = true }
-diesel-async = { version = "0", optional = true, default-features = false }
+diesel-async = { version = "0.4.1", optional = true, default-features = false }
 criterion-perf-events = { version = "0.4", optional = true }
 perfcnt = { version = "0.8", optional = true }
 wtx = { default-features = false, features = [
@@ -71,7 +73,5 @@ codegen-units = 1
 
 [patch.crates-io]
 quaint = { git = "https://github.com/prisma/prisma-engines", branch = "main" }
-sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "main" }
-sea-orm = { git = "https://github.com/SeaQL/sea-orm", branch = "master" }
 diesel-async = { git = "https://github.com/weiznich/diesel_async", branch = "main" }
 diesel = { path = "../diesel" }
