--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -20,6 +20,7 @@ sqlx = { version = "0.7.3", features = [
 tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
 rusqlite = { version = "0.30", optional = true }
 rust_postgres = { version = "0.19.7", optional = true, package = "postgres" }
+tokio_postgres = { version = "0.7.10", optional = true, package = "tokio-postgres" }
 rust_mysql = { version = "23.0", optional = true, package = "mysql" }
 rustorm = { version = "0.20", optional = true }
 rustorm_dao = { version = "0.20", optional = true }
@@ -29,6 +30,7 @@ sea-orm = { version = "0.12.14", optional = true, features = [
   "runtime-tokio-rustls",
 ] }
 futures = { version = "0.3", optional = true }
+futures-util = { version = "0.3", optional = true }
 diesel-async = { version = "0.4.1", optional = true, default-features = false }
 criterion-perf-events = { version = "0.4", optional = true }
 perfcnt = { version = "0.8", optional = true }
