--- a/diesel_migrations/migrations_internals/Cargo.toml
+++ b/diesel_migrations/migrations_internals/Cargo.toml
@@ -4,6 +4,7 @@ version = "2.1.0"
 license = "MIT OR Apache-2.0"
 description = "Internal implementation of diesels migration mechanism"
 homepage = "https://diesel.rs"
+repository = "https://github.com/diesel-rs/diesel"
 rust-version.workspace = true
 edition = "2021"
 
