--- a/diesel_migrations/migrations_macros/Cargo.toml
+++ b/diesel_migrations/migrations_macros/Cargo.toml
@@ -4,6 +4,7 @@ version = "2.1.0"
 license = "MIT OR Apache-2.0"
 description = "Codegeneration macros for diesels embedded migrations"
 homepage = "https://diesel.rs"
+repository = "https://github.com/diesel-rs/diesel"
 edition = "2021"
 rust-version.workspace = true
 
