--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -47,7 +47,7 @@ ipnetwork = ">=0.12.2, <0.21.0"
 quickcheck = "1.0.3"
 
 [features]
-default = ["postgres"]
+default = ["with-deprecated", "32-column-tables"]
 extras = ["chrono", "time", "serde_json", "uuid", "network-address", "numeric", "r2d2"]
 unstable = ["diesel_derives/nightly"]
 large-tables = ["32-column-tables"]
