--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "diesel_derives"
-version = "2.1.3"
+version = "2.1.4"
 license = "MIT OR Apache-2.0"
 description = "You should not use this crate directly, it is internal to Diesel."
 documentation = "https://diesel.rs/guides/"
 homepage = "https://diesel.rs"
 repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_derives"
 autotests = false
-include = ["src/**/*", "LICENSE-*"]
+include = ["src/**/*", "LICENSE-*", "tests/**"]
 rust-version = "1.65.0"
 edition = "2021"
 
