Fix all new unexpected_cfgs warnings
* There was one valid case in diesel_tests
* Switch from `doc_cfg` to `docsrs` for our custom doc cfg as the former
is considered to be a custom thing (that would require a build script to
whitelist) while the later is known by the compiler

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -31,8 +31,8 @@ jobs:
         sudo apt-get -y install libmysqlclient-dev libsqlite3-dev libpq-dev
     - name: Build documentation
       env:
-        RUSTFLAGS: "--cfg doc_cfg"
-        RUSTDOCFLAGS: "--cfg doc_cfg"
+        RUSTFLAGS: "--cfg docsrs"
+        RUSTDOCFLAGS: "--cfg docsrs"
       run:
         cargo +nightly doc --manifest-path diesel/Cargo.toml --features "postgres sqlite mysql extras i-implement-a-third-party-backend-and-opt-into-breaking-changes" --workspace
 
