--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diesel"
-version = "2.1.4"
+version = "2.2.0"
 license = "MIT OR Apache-2.0"
 description = "A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL"
 readme = "README.md"
@@ -11,6 +11,7 @@ keywords = ["orm", "database", "sql"]
 categories = ["database"]
 edition = "2021"
 rust-version.workspace = true
+include = ["src/**.rs", "tests/**.rs", "LICENSE-*", "README.md"]
 
 [dependencies]
 byteorder = { version = "1.0", optional = true }
@@ -20,7 +21,7 @@ libsqlite3-sys = { version = ">=0.17.2, <0.29.0", optional = true, features = ["
 mysqlclient-sys = { version = ">=0.2.5, <0.4.0",  optional = true }
 mysqlclient-src = { version = "0.1.0", optional = true }
 pq-sys = { version = ">=0.4.0, <0.7.0", optional = true }
-pq-src = { version = "0.1", optional = true }
+pq-src = { version = "0.2", optional = true }
 quickcheck = { version = "1.0.3", optional = true }
 serde_json = { version = ">=0.8.0, <2.0", optional = true }
 url = { version = "2.1.0", optional = true }
@@ -38,7 +39,7 @@ itoa = { version = "1.0.0", optional = true }
 time = { version = "0.3.9", optional = true, features = ["macros"] }
 
 [dependencies.diesel_derives]
-version = "~2.1.0"
+version = "~2.2.0"
 path = "../diesel_derives"
 
 [dev-dependencies]
@@ -56,21 +57,29 @@ huge-tables = ["64-column-tables"]
 32-column-tables = ["diesel_derives/32-column-tables"]
 64-column-tables = ["32-column-tables", "diesel_derives/64-column-tables"]
 128-column-tables = ["64-column-tables", "diesel_derives/128-column-tables"]
-postgres = ["pq-sys", "postgres_backend"]
-sqlite = ["libsqlite3-sys", "diesel_derives/sqlite", "time?/formatting", "time?/parsing"]
-mysql = ["mysqlclient-sys", "url", "percent-encoding", "bitflags", "mysql_backend"]
+postgres = ["dep:pq-sys", "postgres_backend"]
+sqlite = ["dep:libsqlite3-sys", "diesel_derives/sqlite", "time?/formatting", "time?/parsing"]
+mysql = ["dep:mysqlclient-sys", "dep:url", "dep:percent-encoding", "dep:bitflags", "mysql_backend"]
 without-deprecated = ["diesel_derives/without-deprecated"]
 with-deprecated = ["diesel_derives/with-deprecated"]
-network-address = ["ipnetwork", "libc"]
-ipnet-address = ["ipnet", "libc"]
-numeric = ["num-bigint", "bigdecimal", "num-traits", "num-integer"]
-postgres_backend = ["diesel_derives/postgres", "bitflags", "byteorder", "itoa"]
-mysql_backend = ["diesel_derives/mysql", "byteorder"]
+network-address = ["dep:ipnetwork", "dep:libc"]
+ipnet-address = ["dep:ipnet", "dep:libc"]
+numeric = ["dep:num-bigint", "dep:bigdecimal", "dep:num-traits", "dep:num-integer"]
+postgres_backend = ["diesel_derives/postgres", "dep:bitflags", "dep:byteorder", "dep:itoa"]
+mysql_backend = ["diesel_derives/mysql", "dep:byteorder"]
 returning_clauses_for_sqlite_3_35 = []
 i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
 r2d2 = ["diesel_derives/r2d2", "dep:r2d2"]
 chrono = ["diesel_derives/chrono", "dep:chrono"]
 time = ["diesel_derives/time", "dep:time"]
+__with_asan_tests = [
+    "libsqlite3-sys?/bundled",
+    "libsqlite3-sys?/with-asan",
+    "pq-sys?/bundled",
+    "pq-src?/with-asan",
+    "mysqlclient-sys?/bundled",
+    "mysqlclient-src?/with-asan",
+]
 
 [package.metadata.docs.rs]
 features = ["postgres", "mysql", "sqlite", "extras"]
