--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "diesel_cli"
-version = "2.1.0"
+version = "2.2.0"
 license = "MIT OR Apache-2.0"
 description = "Provides the CLI for the Diesel crate"
 readme = "README.md"
@@ -10,7 +10,7 @@ repository = "https://github.com/diesel-rs/diesel"
 keywords = ["diesel", "migrations", "cli"]
 autotests = false
 edition = "2021"
-include = ["src/**/*", "LICENSE-*", "README.md"]
+include = ["src/**.rs", "tests/**.rs", "LICENSE-*", "README.md"]
 rust-version.workspace = true
 
 [package.metadata.wix]
@@ -41,19 +41,19 @@ mysqlclient-sys = { version = ">=0.2.5, <0.4.0", optional = true }
 diffy = "0.3.0"
 regex = "1.0.6"
 serde_regex = "1.1"
-diesel_table_macro_syntax = { version = "0.1", path = "../diesel_table_macro_syntax" }
+diesel_table_macro_syntax = { version = "0.2", path = "../diesel_table_macro_syntax" }
 syn = { version = "2", features = ["visit"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
 thiserror = "1.0.10"
 
 [dependencies.diesel]
-version = "~2.1.0"
+version = "~2.2.0"
 path = "../diesel"
 default-features = false
 
 [dependencies.diesel_migrations]
-version = "~2.1.0"
+version = "~2.2.0"
 path = "../diesel_migrations/"
 
 [dev-dependencies]
@@ -66,9 +66,9 @@ default = ["postgres", "sqlite", "mysql"]
 postgres = ["diesel/postgres", "uses_information_schema"]
 sqlite = ["diesel/sqlite"]
 mysql = ["diesel/mysql", "uses_information_schema"]
-sqlite-bundled = ["sqlite", "libsqlite3-sys/bundled"]
-postgres-bundled = ["postgres", "pq-sys/bundled"]
-mysql-bundled = ["mysql", "mysqlclient-sys/bundled"]
+sqlite-bundled = ["sqlite", "dep:libsqlite3-sys", "libsqlite3-sys/bundled"]
+postgres-bundled = ["postgres", "dep:pq-sys", "pq-sys/bundled", "dep:openssl-sys"]
+mysql-bundled = ["mysql", "dep:mysqlclient-sys", "mysqlclient-sys/bundled"]
 uses_information_schema = []
 
 [[test]]
