--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "diesel_derives"
-version = "2.1.0"
+version = "2.2.0"
 license = "MIT OR Apache-2.0"
 description = "You should not use this crate directly, it is internal to Diesel."
 documentation = "https://diesel.rs/guides/"
 homepage = "https://diesel.rs"
 repository = "https://github.com/diesel-rs/diesel/"
 autotests = false
-include = ["src/**/*", "LICENSE-*"]
+include = ["src/**.rs", "tests/**.rs", "LICENSE-*", "README.md"]
 rust-version.workspace = true
 edition = "2021"
 
@@ -15,7 +15,7 @@ edition = "2021"
 syn = { version = "2.0", features = ["derive", "fold", "full"] }
 quote = "1.0.9"
 proc-macro2 = "1.0.27"
-diesel_table_macro_syntax = {version = "0.1", path = "../diesel_table_macro_syntax"}
+diesel_table_macro_syntax = {version = "0.2", path = "../diesel_table_macro_syntax"}
 dsl_auto_type = { version = "0.1", path = "../dsl_auto_type" }
 
 [dev-dependencies]
