Fix the includes in all `Cargo.toml` files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [
 
 [workspace.package]
 rust-version = "1.78.0"
+include = ["src/**/*.rs", "tests/**/*.rs", "LICENSE-*", "README.md"]
 
 # Config for 'cargo dist'
 [workspace.metadata.dist]
