--- a/diesel_migrations/Cargo.toml
+++ b/diesel_migrations/Cargo.toml
@@ -7,7 +7,7 @@ documentation = "https://docs.rs/crate/diesel_migrations"
 homepage = "https://diesel.rs"
 repository = "https://github.com/diesel-rs/diesel"
 edition = "2021"
-include = ["src/**.rs", "tests/**.rs", "LICENSE-*", "README.md"]
+include.workspace = true
 rust-version.workspace = true
 categories = ["database"]
 
