--- a/dsl_auto_type/Cargo.toml
+++ b/dsl_auto_type/Cargo.toml
@@ -7,7 +7,7 @@ documentation = "https://docs.rs/crate/diesel_migrations"
 homepage = "https://diesel.rs"
 edition = "2021"
 rust-version.workspace = true
-include = ["src/**.rs", "tests/**.rs", "LICENSE-*"]
+include.workspace = true
 
 [dependencies]
 darling = "0.20"
