Port the relations to example to sqlite
Closes #4060, as this issue cannot be reproduced (as demonstrated by this port)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [
     "examples/sqlite/getting_started_step_1",
     "examples/sqlite/getting_started_step_2",
     "examples/sqlite/getting_started_step_3",
+    "examples/sqlite/relations",
 ]
 
 [workspace.package]
