Added custom array example with documentation.
Signed-off-by: Marvin Hansen <marvin.hansen@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ Cargo.lock
 !diesel_cli/Cargo.lock
 .env
 *.snap.new
+
+./.idea/*
+/.idea/.gitignore
+/.idea/diesel.iml
+/.idea/modules.xml
+/.idea/vcs.xml
