Custom Array Example: Added embedded schema migration and updated the Readme with a section on testing.
Signed-off-by: Marvin Hansen <marvin.hansen@gmail.com>

--- a/examples/postgres/custom_arrays/Cargo.toml
+++ b/examples/postgres/custom_arrays/Cargo.toml
@@ -5,5 +5,8 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-diesel = { path = "../../../diesel", version = "2.2.0", features = ["postgres", "r2d2"] }
+diesel = { path = "../../../diesel", version = "2.2.0", default-features = false, features = ["postgres", "r2d2"] }
+diesel_migrations = { path = "../../../diesel_migrations", version = "2.2.0", default-features = false, features = ["postgres"] }
+
+
 dotenv = "0.15.0"
