Moved Endpoint impl into type definition file. (See [comment](https://github.com/diesel-rs/diesel/pull/4169#discussion_r1719596303))
Signed-off-by: Marvin Hansen <marvin.hansen@gmail.com>

--- a/examples/postgres/custom_arrays/Cargo.toml
+++ b/examples/postgres/custom_arrays/Cargo.toml
@@ -8,5 +8,5 @@ publish = false
 diesel = { path = "../../../diesel", version = "2.2.0", default-features = false, features = ["postgres", "r2d2"] }
 diesel_migrations = { path = "../../../diesel_migrations", version = "2.2.0", default-features = false, features = ["postgres"] }
 
-
-dotenv = "0.15.0"
+[dev-dependencies]
+dotenvy = "0.15"
