--- a/examples/mysql/all_about_inserts/Cargo.toml
+++ b/examples/mysql/all_about_inserts/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 diesel = { version = "2.2.0", path = "../../../diesel", features = ["mysql", "chrono"] }
+mysqlclient-sys = { workspace = true, features = ["bundled"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
