--- a/examples/mysql/getting_started_step_1/Cargo.toml
+++ b/examples/mysql/getting_started_step_1/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 diesel = { version = "2.2.0", path = "../../../diesel", features = ["mysql"] }
+mysqlclient-sys = { workspace = true, features = ["bundled"] }
 dotenvy = "0.15"
 
 [dev-dependencies]
