--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ edition = "2021"
 
 [workspace.dependencies]
 libsqlite3-sys = "0.30.1"
+pq-sys = "0.6"
+openssl-sys = "0.9.100"
+mysqlclient-sys = "0.4"
 
 # Config for 'cargo dist'
 [workspace.metadata.dist]
