--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -45,9 +45,9 @@ serde = { version = "1.0.193", features = ["derive", "std"] }
 toml = "0.8"
 url = "2.2.2"
 libsqlite3-sys = { workspace = true, optional = true }
-pq-sys = { version = ">=0.4, <0.7.0", optional = true }
-openssl-sys = { version = "0.9.93", features = ["vendored"], optional = true }
-mysqlclient-sys = { version = "0.4.0", optional = true }
+pq-sys = { workspace = true, optional = true }
+openssl-sys = { workspace = true, features = ["vendored"], optional = true }
+mysqlclient-sys = { workspace = true, optional = true }
 diffy = "0.4.0"
 regex = "1.0.6"
 serde_regex = "1.1"
