--- a/examples/postgres/advanced-blog-cli/Cargo.toml
+++ b/examples/postgres/advanced-blog-cli/Cargo.toml
@@ -8,6 +8,8 @@ publish = false
 argon2 = "0.5.0"
 chrono = { version = "0.4.20", default-features = false, features = ["clock", "std"] }
 diesel = { version = "2.2.0", path = "../../../diesel", features = ["postgres", "chrono"] }
+pq-sys = { workspace = true, features = ["bundled"] }
+openssl-sys = { workspace = true, features = ["vendored"] }
 dotenvy = "0.15"
 clap = { version = "4.2.7", features = ["derive"] }
 tempfile = "3.1.0"
