--- a/examples/postgres/all_about_updates/Cargo.toml
+++ b/examples/postgres/all_about_updates/Cargo.toml
@@ -6,6 +6,8 @@ publish = false
 
 [dependencies]
 diesel = { version = "2.2.0", path = "../../../diesel", features = ["postgres"] }
+pq-sys = { workspace = true, features = ["bundled"] }
+openssl-sys = { workspace = true, features = ["vendored"] }
 
 [lib]
 doc = false
