--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -21,11 +21,18 @@ ipnet = { version = "2.5.0" }
 ipnetwork = ">=0.12.2, <0.21.0"
 bigdecimal = ">= 0.0.13, < 0.5.0"
 rand = "0.8.4"
-libsqlite3-sys = { workspace = true, optional = true }
 pq-sys = { workspace = true, optional = true }
 pq-src = { version = "0.3", optional = true }
 mysqlclient-sys = { workspace = true, optional = true }
 mysqlclient-src = { version = "0.1.0", optional = true }
+td = { path = "td" }
+
+[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
+# Something is dependent on it, so we use feature to override it.
+getrandom = { version = "0.2", features = ["js"] }
+wasm-bindgen-test = "0.3.49"
+# Wasm can use thread::sleep when atomic target_feature is enabled, but that requires nightly
+wasmtimer = "0.4.1"
 
 [features]
 default = []
