--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ members = [
     "diesel_cli",
     "diesel_derives",
     "diesel_tests",
-    # test_derive
-    "diesel_tests/td",
+    "diesel_test_helper",
     "diesel_migrations",
     "diesel_migrations/migrations_internals",
     "diesel_migrations/migrations_macros",
