--- a/diesel_test_helper/Cargo.toml
+++ b/diesel_test_helper/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "td"
+name = "diesel_test_helper"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 
 [lib]
 proc-macro = true
