--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -26,7 +26,7 @@ pq-sys = { workspace = true, optional = true }
 pq-src = { version = "0.3", optional = true }
 mysqlclient-sys = { workspace = true, optional = true }
 mysqlclient-src = { version = "0.1.0", optional = true }
-td = { path = "td" }
+diesel_test_helper = { path = "../diesel_test_helper" }
 
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
 # Something is dependent on it, so we use feature to override it.
